--- a/style.css
+++ b/style.css
@@ -31,6 +31,8 @@ body {
           "content" max-content;
     justify-content: center;
     text-align: center;
+    border-radius: 10px;
+    overflow: hidden;
 }
 
 /* Header Image */
@@ -80,10 +82,6 @@ body {
         grid-template-columns: 50% 50%;
     }
     
-    /* .header-img, .header-color {
-        width: 270px;
-    } */
-
     .content {
         padding: 25px 55px 25px 30px;
         text-align: left;
